Add visual plugin to render config, prohibit .yml

--- a/airflow_config/plugins/templates/yaml.html
+++ b/airflow_config/plugins/templates/yaml.html
@@ -1,4 +1,5 @@
 {% extends "appbuilder/base.html" %}
 {% block content %}
-    <p>Airflow is {{ content }}!</p>
+    <h2>Yaml:</h2>
+    <pre>{{ config|safe }}</pre>
 {% endblock %}
