simplify and split ui components

--- a/airflow_config/ui/templates/airflow_config/home.html
+++ b/airflow_config/ui/templates/airflow_config/home.html
@@ -7,7 +7,7 @@
         {% endfor %}
     </ul>
     <h2>Manual:</h2>
-    <form action="" method="GET">
+    <form action="yaml" method="GET">
         <input type="text" id="yaml" name="yaml" value="" placeholder="Enter path to yaml" style="width: 400px;">
         <br>
         <br>
