--- a/airflow_config/ui/templates/airflow_config/404.html
+++ b/airflow_config/ui/templates/airflow_config/404.html
@@ -1,4 +1,7 @@
 {% extends "appbuilder/base.html" %}
 {% block content %}
-    <h1>Could not locate dags folder, check logs for details!</h1>
+    <div class="alert alert-danger" role="alert">
+        <strong>Could not locate dags folder!</strong>
+        <p>Please check the webserver logs for more information.</p>
+    </div>
 {% endblock %}
