Handle empty yaml, require in form

--- a/airflow_config/ui/templates/airflow_config/home.html
+++ b/airflow_config/ui/templates/airflow_config/home.html
@@ -8,7 +8,7 @@
     </ul>
     <h2>Manual:</h2>
     <form action="yaml" method="GET">
-        <input type="text" id="yaml" name="yaml" value="" placeholder="Enter path to yaml" style="width: 400px;">
+        <input type="text" id="yaml" name="yaml" value="" placeholder="Enter path to yaml" required style="width: 400px;">
         <br>
         <br>
         <input type="textarea" id="overrides" name="overrides" value="" placeholder="Enter any overrides" style="width: 400px; height: 100px;">
